Cabal-Version: 1.18
Name: cpphs
Version: 1.20.10
Copyright: 2004-2017, Malcolm Wallace
License: LGPL
License-File: LICENCE-LGPL
Author: Malcolm Wallace <Malcolm.Wallace@me.com>
Maintainer: Andreas Abel
-- homepage:
bug-reports: https://github.com/haskell-pkg-janitors/cpphs/issues
Synopsis: A liberalised re-implementation of cpp, the C pre-processor.
Description:
    Cpphs is a re-implementation of the C pre-processor that is both
    more compatible with Haskell, and itself written in Haskell so
    that it can be distributed with compilers.
    .
    This version of the C pre-processor is pretty-much
    feature-complete and compatible with traditional (K&R)
    pre-processors.  Additional features include: a plain-text mode;
    an option to unlit literate code files; and an option to turn
    off macro-expansion.
    .
    Old homepage: <https://archives.haskell.org/projects.haskell.org/cpphs/>
Category: Development
Build-type: Simple

Extra-Doc-Files:
  README.md
  LICENCE-GPL
  LICENCE-commercial
  CHANGELOG.md
  docs/cpphs.1
  docs/index.html

tested-with:
  GHC == 9.14.1
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

Source-Repository head
    Type:     git
    Location: https://github.com/haskell-pkg-janitors/cpphs.git

Library
    Hs-Source-Dirs: . new

    Build-Depends:
      -- GHC-shipped libraries
        base      >= 4.9  && < 5
      , directory            < 1.4
      , time      >= 1.5  && < 2
      -- Other libraries
      , polyparse >= 1.13 && < 1.14

    Exposed-Modules:
        Language.Preprocessor.Cpphs
        Language.Preprocessor.Unlit
    Other-Modules:
        Language.Preprocessor.Cpphs.CppIfdef
        Language.Preprocessor.Cpphs.HashDefine
        Language.Preprocessor.Cpphs.MacroPass
        Language.Preprocessor.Cpphs.Options
        Language.Preprocessor.Cpphs.Position
        Language.Preprocessor.Cpphs.ReadFirst
        Language.Preprocessor.Cpphs.RunCpphs
        Language.Preprocessor.Cpphs.SymTab
        Language.Preprocessor.Cpphs.Tokenise
        TimeCompat

    default-language: Haskell2010

Executable cpphs
    Hs-Source-Dirs: . new
    Main-Is: cpphs.hs

    Build-Depends:
      -- GHC-shipped libraries
        base      >= 4.9  && < 5
      , directory            < 1.4
      , time      >= 1.5  && < 2
      -- Other libraries
      , polyparse >= 1.13 && < 1.14

    Other-Modules:
        Language.Preprocessor.Cpphs
        Language.Preprocessor.Unlit
        Language.Preprocessor.Cpphs.CppIfdef
        Language.Preprocessor.Cpphs.HashDefine
        Language.Preprocessor.Cpphs.MacroPass
        Language.Preprocessor.Cpphs.Options
        Language.Preprocessor.Cpphs.Position
        Language.Preprocessor.Cpphs.ReadFirst
        Language.Preprocessor.Cpphs.RunCpphs
        Language.Preprocessor.Cpphs.SymTab
        Language.Preprocessor.Cpphs.Tokenise
        TimeCompat

    default-language: Haskell2010
